# pcd-gem-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  migrate.py  pyproject.toml  run.py  web_server.py
.railway/: config.json
config/: settings.py
hubspot_snapshot/: README.md  __init__.py  cli.py  client.py  example_snapshot.html  marketing_email_snapshot_2026-06-19.html  metrics.py  render.py  verify.py
migrations/: 001_schema.sql  002_rebuild_schema.sql
prompts/: 01_fund_extract.md  03_angle_brief.md  04_preqin_taxonomy.md  05_deal_card.md  06_lp_emails.md  eval_cross_gem.md  eval_cross_stage.md  eval_randy_voice.md  eval_voice.md  gem1_gatekeeper.md  gem2_5_angle_brief.md  gem2_extractor.md  gem4_taxonomy_ted.md  gem5_deal_card.md  prescreen.md
prompts/references/: preqin_taxonomy.md
schemas/: 06_lp_emails.json  analyst_extraction.json  angle_brief.json  cross_gem_eval.json  cross_stage_eval.json  deal_card.json  gatekeeper_report.json  gem3_emails.json  prescreen_report.json  randy_eval.json  review_bundle.json  taxonomy_output.json  voice_eval.json
src/: bundle.py  evaluators.py  ingestion.py  models.py  orchestrator.py  persistence.py  regeneration.py  stage_runner.py  supabase_client.py  validator.py
src/stages/: 01_fund_extract.py  02_deck_analysis.py  03_angle_brief.py  04_preqin_taxonomy.py  05_deal_card.py  06_lp_emails.py  gem1_gatekeeper.py  gem2_5_angle_brief.py  gem2_extractor.py  gem3_randy_emails.py  gem4_taxonomy_ted.py  gem5_deal_card.py  prescreen.py
tests/: test_hubspot_snapshot.py  test_schemas.py
web/: app.py
(+5 files in other folders)
